Wrap product descripton text

--- a/GetaGadgetFrontEnd/src/app/product/detail/detail.page.html
+++ b/GetaGadgetFrontEnd/src/app/product/detail/detail.page.html
@@ -44,7 +44,7 @@
 
             <ion-item lines="none">
               <ion-icon name="information-circle-outline" slot="start"></ion-icon>
-              <ion-label>Description: {{product.description}}</ion-label>
+              <ion-label class="ion-text-wrap">Description: {{product.description}}</ion-label>
             </ion-item>
 
             <ion-item lines="none">
