--- a/GetaGadgetFrontEnd/src/app/app.component.html
+++ b/GetaGadgetFrontEnd/src/app/app.component.html
@@ -8,19 +8,33 @@
         </ion-list-header>
         <ion-note>{{email()}}</ion-note>
 
-        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
+        <!-- <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
           <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
             <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
             <ion-label>{{ p.title }}</ion-label>
           </ion-item>
-        </ion-menu-toggle>
+        </ion-menu-toggle> -->
+        <ion-item lines="none" (click)="onNavigate('/product')" button>
+          <ion-label>Products</ion-label>
+          <ion-icon name="storefront-outline" slot="start"></ion-icon>
+        </ion-item>
+        <ion-item lines="none" (click)="onNavigate('/order')" button>
+          <ion-label>Cart</ion-label>
+          <ion-icon name="cart-outline" slot="start"></ion-icon>
+        </ion-item>
+        <ion-item lines="none" (click)="onNavigate('/order/history')" button>
+          <ion-label>Order History</ion-label>
+          <ion-icon name="reader-outline" slot="start"></ion-icon>
+        </ion-item>
         <ion-item lines="none" (click)="onLogout()" button>
           <ion-label>Logout</ion-label>
           <ion-icon name="log-out-outline" slot="start"></ion-icon>
         </ion-item>
+
       </ion-list>
 
     </ion-content>
   </ion-menu>
+
   <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
