--- a/GetaGadgetFrontEnd/src/app/order/place/place.page.html
+++ b/GetaGadgetFrontEnd/src/app/order/place/place.page.html
@@ -92,6 +92,11 @@
                 </ion-select>
               </ion-item>
 
+              <ion-item>
+                <ion-label position="floating">Coupon</ion-label>
+                <ion-input name="coupon" ></ion-input>
+              </ion-item>
+
               <ion-button type="submit" [disabled]="!orderForm.valid" expand="block">{{isLoading? "": "Place Order"}}
                 <ion-spinner *ngIf="isLoading"></ion-spinner>
               </ion-button>
