--- a/GetaGadgetFrontEnd/src/app/order/place/place.page.html
+++ b/GetaGadgetFrontEnd/src/app/order/place/place.page.html
@@ -79,7 +79,7 @@
 
               <ion-item>
                 <ion-label position="stacked">Card Expiration Date</ion-label>
-                <ion-input type="date" ngModel name="cardExpirationDate" #cardExpirationDateCtrl="ngModel"></ion-input>
+                <ion-datetime displayFormat="MM/YYYY" max="2030" min="2022" ngModel name="cardExpirationDate" #cardExpirationDateCtrl="ngModel"></ion-datetime>
               </ion-item>
               <ion-item *ngIf="cardExpirationDateCtrl.touched && !cardExpirationDateCtrl.valid" lines="none">
                 <ion-label color="danger">Please input your card expiration date!</ion-label>
@@ -94,7 +94,7 @@
 
               <ion-item>
                 <ion-label position="floating">Coupon</ion-label>
-                <ion-input name="coupon" ></ion-input>
+                <ion-input type="coupon" ngModel name="coupon" ></ion-input>
               </ion-item>
 
               <ion-button type="submit" [disabled]="!orderForm.valid" expand="block">{{isLoading? "": "Place Order"}}
@@ -102,6 +102,13 @@
               </ion-button>
             </ion-card-content>
           </ion-card>
+        </ion-col>
+        <ion-col offset="5" size="2">
+          <ion-item>
+            <ion-icon name="bag-check-outline" color="warning" slot="start"></ion-icon>
+            <ion-label>Delivery cost is 20 RON</ion-label>
+            <ion-icon name="bag-check-outline" color="warning" slot="end"></ion-icon>
+          </ion-item>
         </ion-col>
       </ion-row>
     </ion-grid>
