--- a/GetaGadgetFrontEnd/src/app/order/place/place.page.html
+++ b/GetaGadgetFrontEnd/src/app/order/place/place.page.html
@@ -114,3 +114,27 @@
     </ion-grid>
   </form>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="primary" style="height: 50px">
+    <ion-grid>
+      <ion-row class="ion-justify-content-evenly">
+        <ion-col offset="0" size="2">
+          <ion-item (click)="about('https://www.facebook.com')" lines="none" color="transparent" button>
+            <ion-icon name="logo-facebook"></ion-icon>
+          </ion-item>
+        </ion-col>
+        <ion-col offset="2" size="2">
+          <ion-item (click)="about('https://www.instagram.com')" lines="none" color="transparent" button>
+            <ion-icon name="logo-instagram"></ion-icon>
+          </ion-item>
+        </ion-col>
+        <ion-col offset="1" size="1">
+          <ion-item (click)="about('https://www.twitter.com')" lines="none" color="transparent" button>
+            <ion-icon name="logo-twitter"></ion-icon>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
