--- a/GetaGadgetFrontEnd/src/app/app.component.html
+++ b/GetaGadgetFrontEnd/src/app/app.component.html
@@ -40,6 +40,11 @@
             <ion-icon name="log-out-outline" slot="start"></ion-icon>
           </ion-item>
         </ion-menu-toggle>
+
+          <audio controls="controls" src="assets/rain-07.mp3">
+            Your browser does not support the HTML5 Audio element.
+          </audio>
+
       </ion-list>
     </ion-content>
   </ion-menu>
