Final SM homework

--- a/GetaGadgetFrontEnd/src/app/auth/auth.page.html
+++ b/GetaGadgetFrontEnd/src/app/auth/auth.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" padding>
+  <iframe id="vp1fG1m0" title="Video Player" style="transform: translateX(50%);" width="400" height="400" frameborder="0" src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1651506639&f=fG1m0RUfoGbaIEB1YDT2bg&d=0&m=p&r=360x360+720x720&volume=100&start_res=720x720&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options=" allowfullscreen></iframe>
   <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" (keyup.enter)="loginForm.valid ? onSubmit(loginForm) : 1" style="height: 100%;">
     <ion-grid style="height: inherit;">
       <ion-row class="ion-align-items-center" style="height: 100%;">
