--- a/GetaGadgetFrontEnd/src/app/contact/contact.page.html
+++ b/GetaGadgetFrontEnd/src/app/contact/contact.page.html
@@ -46,8 +46,8 @@
     </ion-row>
   </ion-grid>
 
-  <video width="800" height="400" style="transform: translateX(45%);" controls>
-    <source src="assets/dog.mp4" type="video/mp4">
+  <video width="800" height="400" style="transform: translateX(67%);" controls>
+    <source src="assets/tech_vid.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </ion-content>
