--- a/GetaGadgetFrontEnd/src/global.scss
+++ b/GetaGadgetFrontEnd/src/global.scss
@@ -24,3 +24,10 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.my-custom-class .modal-wrapper {
+    height: 80%;
+    top: 10%;
+    width: 80%;
+ }
